--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -38,17 +38,26 @@
 <div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+       <div class="alert">
+           <span class="closebtn"
+        onclick="this.parentElement.style.display='none';">&times;</span>
+        Congratulations + {{username}} + You have passed the exam.
+       </div>
     </div>
-        {% else %}
-        <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+    {% else %}
+    <div class="alert alert-danger">
+        <div class="alert alert-success">
+            <div class="alert">
+                <span class="closebtn"
+                onclick="this.parentElement.style.display='none';">&times;</span>
+                Sorry + {{username}} + You failed the exam.
+            </div>
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+        <h5 class="">Exam results</h5>  
+            <a class="btn btn-link" href="{% url 'onlinecourse:submit' %}">Exam Results</a>
         </div>
     </div>
 </body>
